kubernetes/s3-full/config/service.yml
apiVersion: v1
kind: Service
metadata:
  name: events-service
  namespace: codehunters
  labels:
    app: events-service
spec:
  selector:
    app: events-service
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
