kubernetes/s3-full/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-events-service
  namespace: codehunters
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    -  http:
         paths:
           - path: /events
             pathType: Prefix
             backend:
               service:
                 name: service-events-service
                 port:
                   number: 8080
           - path: /actuator/health
             pathType: Prefix
             backend:
               service:
                 name: service-events-service
                 port:
                   number: 8080
           - path: /actuator/prometheus
             pathType: Prefix
             backend:
               service:
                 name: service-events-service
                 port:
                   number: 8080
